@@ -1,6 +1,10 @@
 2006-12-08 - standa
 Save some more registers in vst_effects() and fVDI runs in TOS4.04
 again here.
+Ft2 module is more FreeType2 library error agnostic now. For example
+if the glyph doesn't render nothing is displayed, but it should not
+crash the application anymore.
+More 2.1.10 vs. 2.2.1 changes (read the migration notes this time ;).
 
 2006-12-04 - johan
 Changed to the latest stable release of FreeType (2.2.1).
